--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -30,9 +30,11 @@
 /* ===============================
    NAVBAR
 ================================ */
+
+
 .navbar {
   height: 100px;
-  padding: 0 48px;
+  padding: 0 100px;
 
   display: flex;
   align-items: center;
@@ -40,6 +42,13 @@
 
   background: var(--bg-nav);
   border-bottom: 1px solid var(--border);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+
+  -webkit-backdrop-filter: blur(14px);
+  backdrop-filter: blur(14px);
+  background: rgba(2, 6, 23, 0.75); /* dark glass */
 }
 
 /* ===============================
@@ -172,3 +181,4 @@
   font-weight: 600;
   cursor: pointer;
 }
+
