--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -20,10 +20,11 @@
 
 .hero {
   
-  background: radial-gradient(
-    ellipse at top,
-    #1e3a8a 0%,
-    #050816 60%
+  --bg-gradient: radial-gradient(
+    circle at top,
+    #717a9f 0%,
+    #0b1337 40%,
+    #737db1 100%
   );
   display: flex;
   align-items: center;
